2020 - heute Section Finish

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,9 +15,12 @@
     box-sizing: border-box;
 }
 
+a {
+    text-decoration: none;
+}
+
 body {
     font-family: RopaSansRegular;
-
 }
 
 .navbar-brand {
@@ -90,38 +93,238 @@ body {
     font-weight: 700;
 }
 
-.content-heading h3{
+.content-heading h3 {
     margin: 40px 0;
     font-weight: bold;
     font-size: 25px;
 }
 
-.content-section{
+.content-section {
     font-size: 18px;
 }
-.content-section p{
+
+.content-section p {
     text-align: justify-all;
     margin: 35px 0;
 }
-.signeture{
+
+.signeture {
     width: 30px;
-    margin: 20px 0;
+    margin: 50px 0;
 }
 
 /* ======================= Florian Section ================= */
-.d-heading{
+
+.d-heading {
     font-weight: 700;
 }
-.sub-heading{
+
+.sub-heading {
     display: block;
     font-size: 25px;
     font-weight: 600;
 }
-.sub-heading::before{
-    content: "";
-    display: inline-block;
-    width: 100%;
-    height: 10px;
-    background: #00CE9E;
 
+/*.sub-heading::after{
+    content: "";
+    clear: both;
+    display: inline-block;
+    background: #00CE9E;
+    width: 100%;
+    height: 5px;
+}*/
+
+#florian-section .col-md-8 p {
+    font-size: 17px;
+    font-width: 700;
+    padding: 30px 0;
+}
+
+.col-md-8-profile {
+    width: 76%;
+    position: relative;
+    padding: 60px 50px 20px !important;
+}
+
+.display-img {
+    z-index: 999;
+    position: absolute;
+    top: 25%;
+    left: 80%;
+    right: 23%;
+    transform: translate(-34%, -59%);
+}
+
+.display-img img {
+    width: 400px;
+    text-shadow: 0 0 5px #000;
+}
+
+.p-text {
+    margin: 20px 0;
+    width: 650px;
+    font-size: 20px;
+}
+
+/* ===================== SERVICES SECTION ==================== */
+
+#service-section {
+    margin-top: 80px;
+}
+
+#service-section .service-item {
+    position: relative;
+    overflow: hidden;
+}
+
+#service-section [class*="col-"] {
+    padding: 10px;
+}
+
+#service-section .service-item img {
+    width: 100%;
+    transition: .3s;
+}
+
+#service-section .service-item:hover img {
+    transform: scale(1.2);
+}
+
+#service-section .service-item .service-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #ffffff;
+    visibility: hidden;
+    opacity: 0;
+    transition: .3s;
+}
+
+#service-section .service-item:hover .service-overlay {
+    visibility: visible;
+    opacity: 1;
+}
+
+#service-section .service-item .service-overlay .service-caption {
+    position: absolute;
+    color: #000;
+    text-align: left;
+    padding: 40px;
+    top: 20%;
+    width: 100%;
+}
+
+
+
+#service-section .service-item .service-overlay .service-caption h5 {
+    font-size: 44px;
+    margin: 0 0 40px 0;
+    transition: .5s;
+}
+
+#service-section .service-item:hover .service-overlay .service-caption h5 {
+    margin: 0 0 0 0;
+}
+
+/*============= Heute-section =============*/
+
+
+/*
+.back-bg{
+    background: #00CE9E;
+    width: 100px;
+    padding: 5px;
+}*/
+
+#heute-section {
+    padding: 100px 0 100px 0;
+}
+
+#heute-section .heute-sidebar h4 {
+    font-size: 35px;
+    font-weight: 900;
+}
+
+#heute-section .heute-sidebar ul {
+    font-size: 18px;
+    padding: 0;
+}
+
+#heute-section .heute-sidebar ul li {
+    padding: 7px 0;
+}
+
+.right-side {
+    padding: 70px;
+    background: whitesmoke;
+}
+
+#heute-section .right-side .col-md-3 {
+    text-align: right;
+}
+
+#heute-section .right-side h3 {
+    font-weight: 700;
+    background: #000;
+    color: #fff;
+    display: inline-block;
+    padding: 5px 8px 0 8px;
+    margin: 0 0 5px 0;
+}
+
+#heute-section .right-side .col-md-3 p {
+    font-weight: 400;
+    background: #000;
+    color: #fff;
+    display: inline-block;
+    padding: 5px 8px 0 8px;
+    text-align: right;
+    text-transform: uppercase;
+}
+
+#heute-section .right-side .col-md-9 {
+    padding: 0 0 0 20px;
+}
+
+#heute-section .right-side .col-md-9 h2 {
+    font-weight: 700;
+}
+
+#heute-section .right-side .col-md-9 h5 {
+    font-weight: 700;
+    text-transform: capitalize;
+    padding: 30px 0 10px 0;
+}
+
+#heute-section .right-side .col-md-9 p {
+    text-transform: capitalize;
+    font-size: 18px;
+    font-weight: normal;
+}
+
+#heute-section .right-side .col-md-9 .col-md-12 a {
+    color: #00CE9E;
+    font-size: 20px;
+    border: 2px solid #00CE9E;
+    border-radius: 5px;
+    margin: 5px;
+}
+
+#heute-section .right-side .mini-banner {
+    position: relative;
+}
+
+#heute-section .right-side .mini-banner img {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    box-shadow: 0 0 20px 5px rgba(136, 136, 136, 0.48);
+    transform: translate(-40%, -60%);
+}
+
+#heute-section .right-side .col-md-9 .col-md-12 a:hover {
+    color: #fff;
+    background: #00CE9E;
 }
