--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -125,14 +125,6 @@ body {
     font-weight: 600;
 }
 
-/*.sub-heading::after{
-    content: "";
-    clear: both;
-    display: inline-block;
-    background: #00CE9E;
-    width: 100%;
-    height: 5px;
-}*/
 
 #florian-section .col-md-8 p {
     font-size: 17px;
@@ -327,4 +319,53 @@ body {
 #heute-section .right-side .col-md-9 .col-md-12 a:hover {
     color: #fff;
     background: #00CE9E;
+}
+
+
+/*============ Slick Slider ==============*/
+#slick-section {
+    width: 100%;
+    padding: 60px 0;
+    box-sizing: border-box;
+    overflow: hidden;
+    margin: 0 !important;
+}
+
+.slider {
+    display: flex;
+    padding: 20px !important;
+}
+
+#slick-section img {
+    margin: 20px 50px;
+    box-shadow: 0 0 20px 5px rgba(136, 136, 136, 0.26);
+    width: 100%;
+}
+
+/* ============ Susbildung Section ============= */
+#susbildung-section {
+    width: 100%;
+    overflow: hidden;
+    box-sizing: border-box;
+    display: flex;
+}
+
+#susbildung-section .col-5 {
+    background: whitesmoke;
+    padding: 90px;
+    width: 48.5%;
+    align-items: center;
+    justify-content: right;
+}
+.box-2 {
+    margin: 100px 0 20px 58px;
+}
+
+#susbildung-section .row .col-md-8 h5{
+    font-size: 35px;
+    font-weight: 700;
+}
+
+#susbildung-section .row .col-md-8 p{
+    font-size: 18px;
 }
